# skillrank

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh  skill-registry-lock.json
.github/ISSUE_TEMPLATE/: skill-submission.yml
.github/workflows/: catalog.yml  ci.yml  refresh.yml  release.yml
crates/skillrank/: Cargo.toml
crates/skillrank-core/: Cargo.toml
crates/skillrank-core/src/: client.rs  config.rs  hash.rs  install.rs  lib.rs  lockfile.rs  repo.rs  skills.rs  stack.rs  types.rs
crates/skillrank-core/src/runner/: agent.rs  fixture.rs  mod.rs
crates/skillrank/src/: commands.rs  eval.rs  flags.rs  main.rs  mcp.rs  seed_catalog.json  selfskill.rs  serve.rs  setup.rs  skillrank_command.md  skillrank_skill.md  update.rs
docs/: architecture.md
internal/api/: client.go
internal/registry/: hash_test.go  install_test.go  lockfile.go  repo.go
internal/skills/: skills.go
internal/skillscmd/: mcp_test.go  selfskill.go  serve.go  serve_test.go  setup.go  setup_test.go  skillregistry.go
legacy-go/: go.mod
registry/: .gitignore  README.md  package-lock.json  package.json  vercel.json
registry/api/: enriched.json  ingested.json  registry.mjs  suites.json  verifiers.json
registry/data/: discovered.json  enriched.json  expanded.json  ingested.json
registry/ingest/: discover.mjs  expand.mjs  ingest.mjs
site/: README.md  package.json  vercel.json
site/api/: install.mjs
web/: .gitignore  BUILD_SPEC.md  LICENSE  design-reference.html  middleware.ts  next.config.mjs  package-lock.json  package.json
(+32 files in other folders)
