[workspace]
resolver = "2"
members = ["crates/skillrank-core", "crates/skillrank"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/buildbetter-app/skillrank"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
tiny_http = "0.12"
