[package]
name = "skillrank-core"
description = "SkillRank registry client, install, and eval core — embeddable by the skillrank CLI and by BuildBetter ZeroShot."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq.workspace = true
